# sqlx-conditional-queries

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
core/: Cargo.toml  README.md
core/src/: analyze.rs  codegen.rs  expand.rs  lib.rs  lower.rs  parse.rs  snapshot_tests.rs
core/src/snapshots/: sqlx_conditional_queries_core__snapshot_tests__both_parameter_kinds@MySql_unchecked.snap  sqlx_conditional_queries_core__snapshot_tests__both_parameter_kinds@PostgreSql.snap  sqlx_conditional_queries_core__snapshot_tests__both_parameter_kinds@PostgreSql_unchecked.snap  sqlx_conditional_queries_core__snapshot_tests__both_parameter_kinds@Sqlite.snap  sqlx_conditional_queries_core__snapshot_tests__only_compile_time_bound_parameters@PostgreSql.snap  sqlx_conditional_queries_core__snapshot_tests__only_compile_time_bound_parameters@PostgreSql_unchecked.snap  sqlx_conditional_queries_core__snapshot_tests__only_runtime_bound_parameters@MySql.snap  sqlx_conditional_queries_core__snapshot_tests__only_runtime_bound_parameters@MySql_unchecked.snap  sqlx_conditional_queries_core__snapshot_tests__only_runtime_bound_parameters@PostgreSql.snap  sqlx_conditional_queries_core__snapshot_tests__only_runtime_bound_parameters@PostgreSql_unchecked.snap
core/tests/regressions/: issue_4.rs
examples/pagination/: Cargo.toml  README.md
examples/pagination/migrations/: 20250215184319_items.sql
examples/pagination/src/: main.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: lib.rs
testtest/: Cargo.toml
