[package]
name = "sqlx-conditional-queries-core"
version = "0.1.1"
edition = "2021"
description = "Internal functions for sqlx-conditional-queries"
repository = "https://github.com/kyrias/sqlx-conditional-queries"
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.10.5"
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["extra-traits", "full"] }
thiserror = "1.0.38"

[features]
mysql = []
postgres = []
sqlite = []
