[package]
name = "sqlx-conditional-queries-core"
version = "0.2.1"
edition = "2021"
description = "Internal functions for sqlx-conditional-queries"
repository = "https://github.com/kyrias/sqlx-conditional-queries"
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.13.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.75", features = ["extra-traits", "full"] }
thiserror = "1.0.63"

[features]
mysql = []
postgres = []
sqlite = []
