[package]
name = "sqlx-conditional-queries-core"
version = "0.3.0"
edition = "2021"
description = "Internal functions for sqlx-conditional-queries"
repository = "https://github.com/kyrias/sqlx-conditional-queries"
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.14.0"
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.95", features = ["extra-traits", "full"] }
thiserror = "2.0.9"

[dev-dependencies]
insta = "1.42.0"
prettyplease = "0.2.27"
rstest = "0.24.0"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
