[package]
name = "sqlx-conditional-queries-macros"
version = "0.2.1"
edition = "2021"
description = "Macro definition for sqlx-conditional-queries"
repository = "https://github.com/kyrias/sqlx-conditional-queries"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.86"
sqlx-conditional-queries-core = { path = "../core", version = "0.2" }

[features]
mysql = []
postgres = []
sqlite = []
