[package]
name = "sqlx-conditional-queries-example-pagination"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.3", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
sqlx-conditional-queries = { path = "../..", features = ["sqlite"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"]}
